# TP_NFC

./: .flake8  .gitignore  CLAUDE.md  CONFIG_OPTIONS.md  CONVERSATION_STARTER.md  GOOGLE_SHEETS_SETUP.md  Improvements.yaml  LA ISLA BONITA GUEST TRACKER  LA ISLA BONITA GUEST TRACKER.lnk  La Isla Bonita - Guest Tracker  La Isla Bonita - Guest Tracker.lnk  PORTABLE_SETUP.md  PROJECT_STATUS.md  README.md  Stability_Improvements.txt  State_Structure.yaml  codemcp.toml  format_code.py  install.bat  install.command  install.sh  install_updated.command  portable_python_path.py  pyproject.toml  requirements.txt  run.py  start.bat  start.command  test_nfc.bat  test_nfc.py  test_portable_python.bat  test_sheets.bat  test_sheets.py
.claude/commands/: joke.md  save.md
.github/: README.md  dependabot.yml
.github/workflows/: android-build-test.yml  android-build.yml  ci-full.yml.disabled  ci-starter.yml  ci.yml  log.txt
Android/: BUILD_STATUS.md  CLAUDE.md  GOOGLE_AUTH_DEPENDENCY_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  build_full_app.sh  build_github_way.sh  build_minimal.sh  build_simple.sh  build_venv.sh  build_with_py312.sh  buildozer.spec  buildozer_full.spec  buildozer_google_auth_requirements.txt  buildozer_py312  dev_build_install.sh  dev_workflow.sh  google_auth_complete_requirements.txt  main.py  main_github_simple.py  main_improved_layout.py  main_kivy_test.py  main_minimal.py  main_old_layout.py  main_simple.py  push_to_emulator.sh  requirements.txt  setup_compatible_python.sh  start.command  test_imports.py  test_structure.py
Android/.buildozer/: state.db
Android/android_studio_project/: README.md  build.gradle  debug_logs.sh  install_apk.sh  local.properties  settings.gradle
Android/buildozer_env/: pyvenv.cfg
Android/logs/: 10_Post Run actions_checkout@v4.txt  (+4 more)
config/: config.json  config_example.json  tag_registry.json.backup
docs/: ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  DEVELOPMENT.md  GOOGLE_SHEETS_SETUP.md  HARDWARE.md  TROUBLESHOOTING.md
launchers/: README.md  install_legacy.command  start.bat  start.command  start_updated.command
portable_python/: README.md
python/: python313._pth
src/: main.py
tests/: test_main.py
tools/: README.md  diagnose_nfc.bat  diagnose_nfc.command  diagnose_nfc.py  test_concurrent_nfc.py  test_nfc.bat  test_nfc.command  test_nfc.py  test_nfc_pyscard.py  test_sheets.bat  test_sheets.command
(+48 files in other folders)
